<resources>
    <string name="app_name">MyWallet</string>

    <string name="balance">Balance</string>
    <string name="income">+ Income</string>
    <string name="expense">- Expense</string>

    <string name="transactions">Transactions</string>
    <string name="blances">Balances:</string>
    <string name="incomes">Incomes</string>
    <string name="categories">Categories:</string>
    <string name="expenses">Expenses</string>
    <string name="period">Period:</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="filter">Filter</string>

    <string name="transaction_logo_description">Transaction category logo.</string>

    <string name="statistics">Statistics</string>

    <string name="settings">Settings</string>
</resources>
